# ready2masturbate

./: .env.example  .gitignore  LICENSE  README.md  api_server.py  pyproject.toml  requirements.txt  start_system.py  start_with_uv.py  terminal_scheduler.py  test_complete_workflow.py  test_limited_workflow.py  test_single_image.py
front/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json
front/src/: App.vue
front/src/assets/: base.css  main.css
front/src/components/: CustomProgressBar.vue  VideoLibrary.vue  VideoPlayer.vue
front/src/types/: index.ts
utils/: README.md  frame_analyzer.py  prompts.json  requirements.txt  video_frame_extractor.py
